# ChangeLog for media-gfx/mirage
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/mirage/ChangeLog,v 1.39 2011/06/09 07:41:52 radhermit Exp $

*mirage-0.9.5.2 (09 Jun 2011)

  09 Jun 2011; Tim Harder <radhermit@gentoo.org> +mirage-0.9.5.2.ebuild:
  Version bump (bug #365807).

  22 Mar 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -mirage-0.9.3.ebuild:
  Delete.

  22 Mar 2011; Thomas Kahle <tomka@gentoo.org> mirage-0.9.5.1.ebuild:
  x86 stable per bug 357455

  12 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> mirage-0.9.5.1.ebuild:
  ppc/ppc64 stable wrt #357455

  06 Mar 2011; Markos Chandras <hwoarang@gentoo.org> mirage-0.9.5.1.ebuild:
  Stable on amd64 wrt bug #357455

*mirage-0.9.5.1 (06 Aug 2010)

  06 Aug 2010; Samuli Suominen <ssuominen@gentoo.org>
  +mirage-0.9.5.1.ebuild:
  Version bump wrt #329811 by Geert Vanhaute.

*mirage-0.9.4 (02 Jul 2010)

  02 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> +mirage-0.9.4.ebuild:
  Version bump.

  02 Jun 2010; Torsten Veller <tove@gentoo.org> metadata.xml:
  Remove omp from metadata.xml (#147119)

  17 Aug 2009; Samuli Suominen <ssuominen@gentoo.org> mirage-0.9.3.ebuild:
  Block media-plugins/banshee-mirage wrt #281767.

  30 Nov 2008; <ssuominen@gentoo.org>
  +files/mirage-0.9.3-stop_cleaning_up.patch, mirage-0.9.3.ebuild:
  Don't compile in src_install.

  24 Aug 2008; Markus Meier <maekke@gentoo.org> -mirage-0.9.1.ebuild:
  old

  24 Aug 2008; nixnut <nixnut@gentoo.org> mirage-0.9.3.ebuild:
  Stable on ppc wrt bug 235518

  24 Aug 2008; Markus Rothe <corsair@gentoo.org> mirage-0.9.3.ebuild:
  Stable on ppc64; bug #235518

  23 Aug 2008; Markus Meier <maekke@gentoo.org> mirage-0.9.3.ebuild:
  x86 stable, bug #235518

  23 Aug 2008; Thomas Anderson <gentoofan23@gentoo.org> mirage-0.9.3.ebuild:
  stable amd64, bug 235518

  09 Apr 2008; Markus Meier <maekke@gentoo.org> -mirage-0.9.ebuild,
  mirage-0.9.1.ebuild: