@@ -1,21 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX mirage-0.9.3-stop_cleaning_up.patch 679 RMD160 48efb6efbe2572542631b3149e8a7aa43f941336 SHA1 ae686ad19885436ef797a994f4eda309c1cffaa8 SHA256 40f33674f6821fa84f23de589b2c4924820ec7c8d7952b55232b06d02079494b
-DIST mirage-0.9.5.1.tar.bz2 110288 RMD160 3daf6107e8a9e3449abadbea2c4684eca87194ed SHA1 afbf3867203691152bde812e826562d1cc71edb2 SHA256 6dc3595ac416229eac7b75abae0a2f3971b98be9a0290595cc0f4d4abf3d87af
-DIST mirage-0.9.5.2.tar.bz2 114991 RMD160 223176c3e6c8dbfeaa8c013070e3f1ed0f6016a0 SHA1 125619204a81a4d30c614f8f25899cbe65255719 SHA256 d214a1b6d99d1d1e83da5848a2cef181f6781e0990e93f7ebff5880b0c43f43c
-EBUILD mirage-0.9.5.1.ebuild 1003 RMD160 2b75d0f4db680f052db997e5d41ac3ce733f32aa SHA1 130767e4a7e796f18a0998b24567f703bd5ca45e SHA256 9ce3a36efa49e2e7cf5229de23de4d25fc0035f0c545ab62c64520c59a54c334
-EBUILD mirage-0.9.5.2.ebuild 1013 RMD160 48bf217a01aeb54274ed3adb99fcdc8ff4213662 SHA1 a585f2e180608caa276b165b21d33dbe8e0842b4 SHA256 975b304994736d3926b1dae371ed150751148a8eb740e40646d8251f0b04c405
-MISC ChangeLog 4491 RMD160 aaea04c52415916137db24469f04bfe0c2b50ea6 SHA1 530b28ea088c7ccbafd690f4b346dd2855f4c2e9 SHA256 31197b8694c3926d33551f60bc767f16c8cb7edac674a29ebfa0590ce01f23ec
-MISC metadata.xml 163 RMD160 9cdda004bed83a887f4a756cb1550fab6ce563ce SHA1 bfc4f31690e338a159152dcd46d56ff7fd6b6e1b SHA256 212655100c50c4193072996553f15984b9788fb20fb4175efd2418b80d428564
+AUX mirage-0.9.3-stop_cleaning_up.patch 679 SHA256 40f33674f6821fa84f23de589b2c4924820ec7c8d7952b55232b06d02079494b SHA512 3269a11d970b0e21fff211a7d324d5d51054a8dfb547b15345e1fb252f3c311e42f01d59849a9bbd7e19a39cd5f918231e118aa65673d91bd08ca5312db3ec67 WHIRLPOOL 77a19c5a1c0e85323bdee9ca5d177a2875ebae2610b79582d46fb1af0089fba3a75c32b727c98e0b4799f0ea4b6c81eacd99394537c6c44ff7740c18102522f3
+DIST mirage-0.9.5.1.tar.bz2 110288 SHA256 6dc3595ac416229eac7b75abae0a2f3971b98be9a0290595cc0f4d4abf3d87af
+DIST mirage-0.9.5.2.tar.bz2 114991 SHA256 d214a1b6d99d1d1e83da5848a2cef181f6781e0990e93f7ebff5880b0c43f43c SHA512 c754c7c74523f060cf5c120750de3a5d9935eff2b04a30b4f266939528c1b01f26a27294765dbed47adeef88301cb3d7ff8f7464e6504ba5e8ff734ec0685c76 WHIRLPOOL 53893d24aec11c19c88cdf38ebc8c1efa6d5ad7c71002b32852f0cfd0ccb63c6d2ce8ce491f6d735a59e3c6a374277d55f917d8be2f700d62a1fd898f884b690
+EBUILD mirage-0.9.5.1.ebuild 1003 SHA256 9ce3a36efa49e2e7cf5229de23de4d25fc0035f0c545ab62c64520c59a54c334 SHA512 029609531acea987b29389aa65f3ccec24bd2331431337c087f27def80cf762601939fa60281befcee008597e2cbc5e0cf8c7b7614e0ccd7135baeeb4f829669 WHIRLPOOL a77c88dacfe13579a5799c5d273d0ac5320e603525bb6efdc2b5fe12658a3ba08bdb3bef28d651fcc20a8aaab166a4f30d9eebdcfa90a10193e99027cddc698e
+EBUILD mirage-0.9.5.2.ebuild 1015 SHA256 0427c5bac16f72a69f8ef0b73878154ebb1930bae5b243a66114cae8ce8989bc SHA512 a8a875bef61a03d726b310e4ea815b1dbb16f6efc8d4b5bd402dbbe373a509e6692c590d1fb0af194733de56172fdc76496dff29a962629a4c8098d002ea9219 WHIRLPOOL b9139108d540e65da5824f5a70593e17ce2727633fd67be0496e723c166af43fe6c5a8880c19ccc8969b12cb58f5752e2e51d3b94880f889ca9034d57392bfdf
+MISC ChangeLog 4584 SHA256 fd5f7f1c5f6be6f495ede5545b0c7686f7ed14ec32b8286543df1a7a16df54de SHA512 9716932e6fccadb334428baae6f4a2e11bc8f31101aa19f0f4ac68dc8eca4600f16cc46cdb01b93aea08298dd36674011b4364ca8d402f821fab0c03dc42edbb WHIRLPOOL 090fe538fc2bf44ff4d98873dcdaff6ce01edf66d6ccb432f996334086ce69c8bc4a82adc697de8a08b959d63894c75ebc3b4d5b34d5a167dcf245b6ecd99f5e
+MISC metadata.xml 163 SHA256 212655100c50c4193072996553f15984b9788fb20fb4175efd2418b80d428564 SHA512 ff4552bc5fce771795ba67e190fc9eb90ac70aaff219130e7ff9a36cde348cd4a771d8b61e158ce9390771d29e2e0ffe17618746ff1843b2af7322e0f21cdf2c WHIRLPOOL b0db778b8dab215f2790081db3d51586e43bbc790ab06f704ef4ddd6e83e90e53685d3483feff33ed1763945fca36e934e7813bff822713869d0d7f208678fb1
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQEcBAEBAgAGBQJN8HlGAAoJEEqz6FtPBkyjw+gH/jScx3fMv3H0vACDC6YAa7iq
-N4erc9Bq/4j4KFLCZ4SWEBdTIevDegjGqjTZNaRREXJ5re+aXMMV5LZ4NYDDr9pu
-0AxFBBB3cMEb+Hg5FJfHJUzwl1dk9VBoFVg3FaHs/BPYSVOdEVR0DUHodcQscLMK
-EeXVRoNk0XveeFIrjpJZWUq6c3n15Zu1HGYYz/WztGz3GsAMl0FMjld1JYa/HW+F
-W195t+Xhdq1oW3SYEtzp11L6fopVSHVsPV+1P1vhb+3DhAnSWmsqTsjEZq8aSkX0
-YcYVI0L07g3/HTDvHjCN07IKGKvQ6LOaB4djwyq8V6AmTVyDimC3xN/tqKC+6iI=
-=94B5
+iEYEAREIAAYFAlIBPYQACgkQkKaRLQcq0GJ6QACeMylSq7NSNIFK8pqcnU9/7RDV
+zGAAn0yACFCaz+f4kj2PCVxUIgr+pHej
+=Gs6V
 -----END PGP SIGNATURE-----
