@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/mirage/mirage-0.9.5.2.ebuild,v 1.1 2011/06/09 07:41:52 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/mirage/mirage-0.9.5.2.ebuild,v 1.2 2013/08/06 18:10:30 maekke Exp $
 
 EAPI=3
 
@@ -16,7 +16,7 @@ SRC_URI="mirror://berlios/mirageiv/${P}.tar.bz2"
 
 LICENSE="GPL-3"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~ppc64 ~x86 ~x86-fbsd"
+KEYWORDS="~amd64 ~arm ~ppc ~ppc64 ~x86 ~x86-fbsd"
 IUSE=""
 
 RDEPEND="x11-libs/libX11
