@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/mirage
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/mirage/ChangeLog,v 1.39 2011/06/09 07:41:52 radhermit Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/mirage/ChangeLog,v 1.40 2013/08/06 18:10:30 maekke Exp $
+
+  06 Aug 2013; Markus Meier <maekke@gentoo.org> mirage-0.9.5.2.ebuild:
+  add ~arm, bug #476126
 
 *mirage-0.9.5.2 (09 Jun 2011)
 
